--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="bg-[#FFD8D1] text-[#F8F3EA]">
+<body class="text-[#F8F3EA]">
+    <video autoplay muted loop class="fixed top-0 left-0 w-full h-screen object-cover z-[-10]">
+        <source src="assets /video/hello-kitty-with-strawberry-cocktail.1920x1080.mp4" type="video/mp4">
+      </video>
     <button class="bg-[#570228] text-[#FFD8D1] p-2 flex flex-row gap-2 rounded-[50px] capitalize py-[10px] px-[20px] m-2">
         Click me for a suprise <p>😉</p>
     </button>
-        <div class="bg-[#F8F3EA] bg-opacity-50 p-4 rounded-[10px] m-2 text-[#FA9EBC] font-bold">
+        <div class="bg-[#F8F3EA] bg-opacity-60 p-4 rounded-[10px] m-2 text-[#FA9EBC]">
             <div class="flex justify-center flex-wrap flex-col items-center">
                 <img src="assets /gif/hello-kitty-my-melody.gif" alt="random image" class="rounded-[50%] w-[100px] h-[100px] object-cover">
-                <h1>MY MELODY</h1>
+                <h1 class="font-bold">MY MELODY</h1>
             
             </div>
             <nav class="flex gap-2 justify-end mt-[-120px] mr-10">
