--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <h1 class="font-bold">MY MELODY</h1>
             
             </div>
-            <div>
-                <button class="bg-[#F8F3EA] hover:bg-[#570228] rounded p-1 flex gap-2 items-center "><i class="fa-brands fa-pinterest"></i><a href="https://www.pinterest.com/adhikarisanskar360/">Pinterest</a></button>
+            <div class=" flex justify-center">
+                <button class="bg-[#F8F3EA] hover:bg-[#570228] rounded p-1 flex gap-2 items-center w-full"><i class="fa-brands fa-pinterest"></i><a href="https://www.pinterest.com/adhikarisanskar360/" target="_blank">Pinterest</a></button>
             </div>
             <nav class="flex gap-2 justify-end mt-[-120px] mr-10">
                 <div class="flex flex-col gap-4 border-l-2 border-gray-400 p-4">
