--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <button class="bg-[#570228] text-[#FFD8D1] p-2 flex flex-row gap-2 rounded-[50px] capitalize py-[10px] px-[20px] m-2">
         Click me for a suprise <p>😉</p>
     </button>
-        <div class="bg-[#F8F3EA] bg-opacity-60 p-4 rounded-[10px] m-2 text-[#FA9EBC]">
+        <div class="bg-[#FFF5F8] bg-opacity-70 p-4 rounded-[10px] m-2 text-[#A12B3F]">
             <div class="flex justify-center flex-wrap flex-col items-center">
                 <img src="assets /gif/hello-kitty-my-melody.gif" alt="random image" class="rounded-[50%] w-[100px] h-[100px] object-cover">
                 <h1 class="font-bold">MY MELODY</h1>
             
             </div>
             <div class=" flex justify-center">
-                <button class="bg-[#F8F3EA] hover:bg-[#570228] rounded p-1 flex gap-2 items-center w-full"><i class="fa-brands fa-pinterest"></i><a href="https://www.pinterest.com/adhikarisanskar360/" target="_blank">Pinterest</a></button>
+                <button class="bg-[#A12B3F] text-[#FFF5F8] hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1 flex gap-[400px] items-center w-[900px] mt-6 text-xl"><i class="fa-brands fa-pinterest"></i><a href="https://www.pinterest.com/adhikarisanskar360/" target="_blank">Pinterest</a></button>
             </div>
             <nav class="flex gap-2 justify-end mt-[-120px] mr-10">
                 <div class="flex flex-col gap-4 border-l-2 border-gray-400 p-4">
-                    <button class="flex gap-4 items-center hover:bg-[#570228] rounded p-1"><i class="fa-solid fa-link"></i> Links</button>
-                    <button class="flex gap-4 items-center hover:bg-[#570228] rounded p-1"><i class="fa-solid fa-image"></i> Picture</button>
-                    <button class="flex gap-4 items-center hover:bg-[#570228] rounded p-1"><i class="fa-solid fa-music"></i>Music</button>
-                    <button class="flex gap-4 items-center hover:bg-[#570228] rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Whislist</button>
+                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-link"></i> Links</button>
+                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-image"></i> Picture</button>
+                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-music"></i>Music</button>
+                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Whislist</button>
                 </div>
             </nav>
             <div>
