--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1 class="font-bold">MY MELODY</h1>
             
             </div>
-            <div class=" flex justify-center flex-wrap">
+            <div class=" flex justify-center flex-wrap w-[85%]">
                 <button class="bg-[#A12B3F] text-[#FFF5F8] hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1 flex gap-[400px] items-center w-[900px] mt-6 text-xl"><i class="fa-brands fa-instagram ml-2"></i><a href="" target="_blank">Instagram</a></button>
                 <button class="bg-[#A12B3F] text-[#FFF5F8] hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1 flex gap-[400px] items-center w-[900px] mt-6 text-xl"><i class="fa-brands fa-tiktok ml-2"></i><a href="" target="_blank">Tik-Tok</a></button>
                 <button class="bg-[#A12B3F] text-[#FFF5F8] hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1 flex gap-[400px] items-center w-[900px] mt-6 text-xl"><i class="fa-brands fa-pinterest ml-2"></i><a href="" target="_blank">Pinterest</a></button>
@@ -31,7 +31,7 @@
 
             </div>
             <nav class="flex gap-2 justify-end mt-[-350px] mr-10">
-                <div class="flex flex-col gap-[60px] border-l-2 border-gray-400 p-4 fixed">
+                <div class="flex flex-col gap-[60px] border-l-2 border-gray-400 p-4 fixed w-[15%]">
                     <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-link"></i> Links</button>
                     <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-image"></i> Picture</button>
                     <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-music"></i>Music</button>
