--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
             </div>
             <nav class="flex gap-2 justify-end mt-[-350px] mr-10">
-                <div class="flex flex-col gap-[60px] border-l-2 border-gray-400 p-4 fixed w-[15%]">
-                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-link"></i> Links</button>
-                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-image"></i> Picture</button>
-                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-music"></i>Music</button>
-                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Whislist</button>
+                <div class="flex flex-col gap-[60px] border-l-2 border-gray-400 p-4 w-[8%]">
+                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1 w-fit"><i class="fa-solid fa-link"></i> Links</button>
+                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1 w-fit"><i class="fa-solid fa-image"></i> Picture</button>
+                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1 w-fit"><i class="fa-solid fa-music"></i>Music</button>
+                    <button class="flex gap-4 items-center hover:bg-[#570228] hover:text-[#FFF5F8] rounded p-1 w-fit"><i class="fa-solid fa-cart-shopping"></i>Whislist</button>
                 </div>
             </nav>
             <div>
